[package]
name = "linked-futures"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@lancastr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
one-of-futures = "0.1.1"
futures-core-preview = "0.3.0-alpha.19"

[dev-dependencies]
futures-preview = "0.3.0-alpha.19"
version-sync = "0.8"
tokio = "0.2.0-alpha.6"

