[package]
name = "linked-futures"
version = "0.1.3"
authors = ["Gleb Pomykalov <gleb@lancastr.com>"]
edition = "2018"
description = "Link futures into a block, which stops all of the included futures when any of the futures complete"
keywords = ["futures", "link", "merge", "join", "async"]
categories = ["asynchronous"]
license = "MIT"
homepage = "https://github.com/glebpom/linked-futures"
documentation = "https://docs.rs/linked-futures/0.1.3/linked-futures/"
repository = "https://github.com/glebpom/linked-futures"
readme = "README.md"

[dependencies]
one-of-futures = "0.1.3"
futures = "0.3.1"

[dev-dependencies]
version-sync = "0.8"
tokio = {version = "0.2", features = ["full"] }

[workspace]
members = [
  ".",
  "test-linked-futures"
]