[package]
name = "test-linked-futures"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@lancastr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-futures = { path = ".." }
futures-preview = "0.3.0-alpha.19"
